# gentle-m

./: .cvsignore  .editorconfig  .gitignore  ABItype.cpp  ABItype.h  ABIviewer.cpp  ABIviewer.h  Alignment.cpp  Alignment.h  AlignmentAppearanceDialog.cpp  AlignmentAppearanceDialog.h  AminoAcids.cpp  AminoAcids.h  AutoAnnotate.cpp  AutoAnnotate.h  Bitmap-Vorlagen.ppt  CGview.cpp  CGview.h  ChildBase.cpp  ChildBase.h  CloneManager.cpp  CloneManager.h  CloningAssistant.cpp  CloningAssistant.h  CoolCanvas.cpp  CoolCanvas.h  Doxyfile  ExternalBLAST.cpp  ExternalInterface.cpp  ExternalInterface.h  ExternalNCBI.cpp  FindSequenceDialog.cpp  FindSequenceDialog.h  GENtle-Info.plist  GENtle.dev  GENtle.layout  GENtle_private.rc  GENtle_private.res  GENtle_universal-Info.plist  GenBank.cpp  (+152 more)
.github/workflows/: c-cpp.yml  codeql.yml
GENtle.xcodeproj/: magnusmanske.mode1  magnusmanske.pbxuser  project.pbxproj
bitmaps/: copy.xpm  cut.xpm  paste.xpm  preview.xpm  save.xpm
clustalw/: .cvsignore  README  calctree.c  clustalw.doc  clustalw.h  clustalw.hlp  interfac.c  malign.cpp  param.h  readmat.c  showpair.c  xmenu.h
coils/: main.h
docs/: GENtle Manual.sxw  GENtle.1  manual.adoc
help/: TODO.txt  de_alignment.htm  de_amino_acids.htm  de_enter_sequence.htm  de_import.htm  de_main.htm  de_manage_db.htm  de_pcr.htm  de_restriction.htm  de_shortcuts.htm  de_storage.htm  de_vector.htm  de_vector_properties.htm  en_amino_acids.htm  en_enter_sequence.htm  en_ligation.htm  en_main.htm  en_pcr.htm  en_shortcuts.htm  jstest.html
ipc/: ChangeLog  INSTALL  config.h.in  configure  element.h  global.h  gp_out.c  gp_out.h  ipc.cpp  ipc.h  pars.c  pars.cpp  pars.h
m4/: mysql.m4
src/: ABItype.cpp  ABItype.h  ABIviewer.cpp  Alignment.cpp  Alignment.h  AlignmentAppearanceDialog.cpp  AlignmentAppearanceDialog.h  AminoAcids.cpp  AutoAnnotate.cpp  CGview.cpp  CGview.h  ChildBase.cpp  ChildBase.h  CloningAssistant.cpp  ExternalInterface.h  FindSequenceDialog.cpp  GENtle.icns  GenBank.cpp  GenBank.h  Makefile.am  ManageDatabase.cpp  ManageDatabase.h  MiscDialogs.cpp  MiscDialogs.h  MyChild.cpp  MyChild.h  MyFrame.cpp  MyFrame.h  OnlineTools.cpp  OnlineTools.h  PCR_Troubleshoot.cpp  PCR_Troubleshoot.h  PlasmidCanvas.cpp  PlasmidCanvas.h  PlasmidCanvasCircular.cpp  PlasmidCanvasHandlers.cpp  PlasmidCanvasLinear.cpp  PrimerDesign.cpp  PrimerDesign.h  ProgramOptionsDialog.cpp  (+76 more)
src/bitmaps/: help.xpm  new.xpm  open.xpm  print.xpm
src/help/: .cvsignore  Bugs & Co.txt  de_enter_sequence.htm  de_ligation.htm  de_storage.htm  en_alignment.htm  en_import.htm  en_pcr.htm  en_restriction.htm  jstest.html  stylesheet.css  todo.txt
src/ipc/: ADDING_ELEMENTS  AUTHORS  Makefile.in  NEWS  README  acconfig.h  configure.in  element.cpp  elemente  gp_out.cpp  ipc.cpp  mkinstalldirs
tests/: .gitignore  Makefile.am  TXMLfile_test.cpp
tinyxml/: license.txt  xmltest.cpp
trunk/: .cvsignore  ABItype.cpp  ABItype.h  ABIviewer.cpp  ABIviewer.h  Alignment.cpp  Alignment.h  AlignmentAppearanceDialog.cpp  AlignmentAppearanceDialog.h  AminoAcids.cpp  AminoAcids.h  AutoAnnotate.cpp  AutoAnnotate.h  Bitmap-Vorlagen.ppt  CGview.cpp  CGview.h  ChildBase.cpp  ChildBase.h  CloningAssistant.cpp  CloningAssistant.h  CoolCanvas.cpp  CoolCanvas.h  Doxyfile  ExternalBLAST.cpp  ExternalInterface.cpp  ExternalInterface.h  ExternalNCBI.cpp  FindSequenceDialog.cpp  FindSequenceDialog.h  GENtle-Info.plist  GENtle.dev  GENtle.layout  GENtle_private.h  GENtle_private.res  GenBank.cpp  GenBank.h  InstallerScript.nsi  InstallerScript2.nsi  Makefile  Makefile.am  (+117 more)
trunk/GENtle.xcodeproj/: magnusmanske.mode1  magnusmanske.pbxuser  project.pbxproj
trunk/clustalw/: alnscore.c  amenu.cpp  calcgap.cpp  calcprf1.c  calctree.cpp  clustalv.doc  clustalw.c  gon90.bla  makefile.dos  njplot.help  palign.cpp  param.h  prfalign.c  sequence.cpp  trees.c  util.cpp
trunk/coils/: ncoils.c  ncoils.h  read_matrix.c
trunk/docs/: GENtle Manual [en].odt  GENtle Manual.sxw
trunk/help/: Bugs & Co.txt  de_amino_acids.htm  de_import.htm  de_ligation.htm  de_main.htm  de_shortcuts.htm  de_vector_properties.htm  en_alignment.htm  en_import.htm  en_main.htm  en_restriction.htm  en_shortcuts.htm  stylesheet.css  todo.txt  update Jan.bat
trunk/ipc/: Makefile.am  acconfig.h  element.c  element.cpp  element.h  global.h  gp_out.h  ipc.c  ipc.cpp  ipc.h  pars.cpp  pars.h
trunk/wav/: license.txt
wav/: license.txt
