bin_PROGRAMS = GENtle
GENtle_sources = ABItype.cpp \
	ABIviewer.cpp \
	Alignment.cpp \
	AminoAcids.cpp \
	ChildBase.cpp \
	CoolCanvas.cpp \
	ExternalInterface.cpp \
	ExternalNCBI.cpp \
	ExternalBLAST.cpp \
	FindSequenceDialog.cpp \
	GenBank.cpp \
	main.cpp \
	ManageDatabase.cpp \
	MiscDialogs.cpp \
	MyChild.cpp \
	MyFrame.cpp \
	PlasmidCanvasCircular.cpp \
	PlasmidCanvas.cpp \
	PlasmidCanvasHandlers.cpp \
	PlasmidCanvasLinear.cpp \
	PrimerDesign.cpp \
	ProgramOptionsDialog.cpp \
	RestrictionEnzymes.cpp \
	SendHTTP.cpp \
	SequenceCanvas.cpp \
	SequenceTypeAA.cpp \
	SequenceTypeABI.cpp \
	SequenceTypeAlign.cpp \
	SequenceTypeDNA.cpp \
	SequenceTypeFeature.cpp \
	SequenceTypePlot.cpp \
	SequenceTypeRestriction.cpp \
	SequenceTypes.cpp \
	TCalculator.cpp \
	TClone.cpp \
	TextImportDialog.cpp \
	TImageDisplay.cpp \
	TIMGreader.cpp \
	TItemEditDialog.cpp \
	TLigationDialog.cpp \
	TMainTree.cpp \
	todo.cpp \
	TPDB.cpp \
	TPrimer.cpp \
	TPrimerDialog.cpp \
	TRestrictionEditor.cpp \
	TSilmutDialog.cpp \
	TStorage.cpp \
	TUndo.cpp \
	TUReadSeq.cpp \
	TVector.cpp \
	TVectorEditor.cpp \
	TVectorEditorEnzymes.cpp \
	TVectorEditorItems.cpp \
	TVectorTree.cpp \
	TVirtualGel.cpp \
	TXMLfile.cpp \
	ureadseq.c \
	tinyxml/tinystr.c \
	tinyxml/tinyxml.c \
	tinyxml/tinyxmlparser.c \
	tinyxml/tinyxmlerror.c \
	clustalw/alnscore.c \
	clustalw/amenu.c \
	clustalw/calcgap.c \
	clustalw/calcprf1.c \
	clustalw/calcprf2.c \
	clustalw/calctree.c \
	clustalw/clustalw.c \
	clustalw/gcgcheck.c \
	clustalw/interfac.c \
	clustalw/malign.c \
	clustalw/palign.c \
	clustalw/prfalign.c \
	clustalw/random.c \
	clustalw/readmat.c \
	clustalw/sequence.c \
	clustalw/showpair.c \
	clustalw/trees.c \
	clustalw/util.c
