SUFFIXES=.cpp .rc

bin_PROGRAMS = main

main_LDADD = $(WX_LIBS) -L/usr/lib -lsqlite -lmysqlclient
main_SOURCES = TXMLfile.cpp\
TVectorTree.cpp\
TVirtualGel.cpp\
TVectorEditorItems.cpp\
TVectorEditorEnzymes.cpp\
TVectorEditor.cpp\
TVector.cpp\
TUndo.cpp\
TUReadSeq.cpp\
TStorage.cpp\
TSilmutDialog.cpp\
TRestrictionEditor.cpp\
TPrimer.cpp\
TPrimerDialog.cpp\
TPDB.cpp\
TLigationDialog.cpp\
TMainTree.cpp\
todo.cpp\
TItemEditDialog.cpp\
TImageDisplay.cpp\
TIMGreader.cpp\
TextImportDialog.cpp\
TClone.cpp\
SequenceTypes.cpp\
TCalculator.cpp\
SequenceTypeRestriction.cpp\
SequenceTypePlot.cpp\
SequenceTypeFeature.cpp\
SequenceTypeDNA.cpp\
SequenceTypeAlign.cpp\
SequenceTypeABI.cpp\
SequenceTypeAA.cpp\
SequenceCanvas.cpp\
SendHTTP.cpp\
RestrictionEnzymes.cpp\
ProgramOptionsDialog.cpp\
PlasmidCanvasLinear.cpp\
PrimerDesign.cpp\
PlasmidCanvasHandlers.cpp\
PlasmidCanvasCircular.cpp\
PlasmidCanvas.cpp\
MyFrame.cpp\
MyChild.cpp\
MiscDialogs.cpp\
ManageDatabase.cpp\
main.cpp\
GenBank.cpp\
FindSequenceDialog.cpp\
ExternalNCBI.cpp\
ExternalInterface.cpp\
ExternalBLAST.cpp\
ChildBase.cpp\
CoolCanvas.cpp\
AminoAcids.cpp\
Alignment.cpp\
ABIviewer.cpp\
ABItype.cpp\
ureadseq.c\
tinyxml/tinyxmlparser.cpp\
tinyxml/tinyxmlerror.cpp\
tinyxml/tinyxml.cpp\
tinyxml/tinystr.cpp\
clustalw/alnscore.cpp\
clustalw/amenu.cpp\
clustalw/calcgap.cpp\
clustalw/calcprf1.cpp\
clustalw/calcprf2.cpp\
clustalw/calctree.cpp\
clustalw/clustalw.cpp\
clustalw/gcgcheck.cpp\
clustalw/interfac.cpp\
clustalw/malign.cpp\
clustalw/palign.cpp\
clustalw/prfalign.cpp\
clustalw/random.cpp\
clustalw/readmat.cpp\
clustalw/sequence.cpp\
clustalw/showpair.cpp\
clustalw/trees.cpp\
clustalw/util.cpp
